# IVS-News

./: .env  .env.example  .gitignore  README.md  articles.json  main.py  pipeline.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: ivs-news-pipeline.yml
